Replace master branch with page content via GitHub

--- a/index.html
+++ b/index.html
@@ -3,10 +3,11 @@
   <head>
     <meta charset="utf-8">
     <meta http-equiv="X-UA-Compatible" content="chrome=1">
-    <title>Jochym.github.io by jochym</title>
+    <title>Paweł T. Jochym projects by jochym</title>
 
     <link rel="stylesheet" href="stylesheets/styles.css">
     <link rel="stylesheet" href="stylesheets/pygment_trac.css">
+    <script src="javascripts/scale.fix.js"></script>
     <meta name="viewport" content="width=device-width, initial-scale=1, user-scalable=no">
     <!--[if lt IE 9]>
     <script src="//html5shiv.googlecode.com/svn/trunk/html5.js"></script>
@@ -15,16 +16,19 @@
   <body>
     <div class="wrapper">
       <header>
-        <h1>Jochym.github.io</h1>
-        <p>GitHub pages repo</p>
+        <h1 class="header">Paweł T. Jochym projects</h1>
+        <p class="header">Share and share alike</p>
 
 
-        <p class="view"><a href="https://github.com/jochym">View My GitHub Profile</a></p>
+
+        <ul>
+          <li><a class="buttons github" href="https://github.com/jochym">GitHub Profile</a></li>
+        </ul>
 
       </header>
       <section>
         <h2>
-<a name="pawe%C5%82-t-jochym-projects-on-github" class="anchor" href="#pawe%C5%82-t-jochym-projects-on-github"><span class="octicon octicon-link"></span></a>Paweł T. Jochym projects on github</h2>
+<a name="my-published-projects" class="anchor" href="#my-published-projects"><span class="octicon octicon-link"></span></a>My published projects</h2>
 
 <p>Here is a list of my current project pages maintained on GitHub (with project repos naturally).</p>
 
@@ -35,14 +39,14 @@
 <a href="http://jochym.github.io/qe-util">qe-util</a> a set of utilities for using Quantum-Espresso with ASE and ipython notebooks.</li>
 <li>
 <a href="http://jochym.github.io/qe-util">qe-doc</a> a set of tutorials for Quantum-Espresso environment inside IPython notebooks developed as a colaborative project between the Institute of Nuclear Physics and the University of Saskachwan. </li>
-</ul><p>These are just the published projects with proper project pages. The rest of my projects are hosted on <a href="http://github.com/jochym">my github page</a> but they are not ready for <em>public consumption</em>. I will add them here as they mature.</p>
+</ul><p>These are just the published projects with proper project pages. The rest of my projects are hosted on <a href="http://github.com/jochym">my github page</a>, but they are not ready for <em>public consumption</em> yet. I will add them here as they mature.</p>
       </section>
       <footer>
-        <p><small>Hosted on GitHub Pages &mdash; Theme by <a href="https://github.com/orderedlist">orderedlist</a></small></p>
+        <p><small>Hosted on <a href="http://pages.github.com">GitHub Pages</a> using the Dinky theme</small></p>
       </footer>
     </div>
-    <script src="javascripts/scale.fix.js"></script>
-              <script type="text/javascript">
+    <!--[if !IE]><script>fixScale(document);</script><![endif]-->
+		          <script type="text/javascript">
             var gaJsHost = (("https:" == document.location.protocol) ? "https://ssl." : "http://www.");
             document.write(unescape("%3Cscript src='" + gaJsHost + "google-analytics.com/ga.js' type='text/javascript'%3E%3C/script%3E"));
           </script>
