Replace master branch with page content via GitHub

--- a/index.html
+++ b/index.html
@@ -38,7 +38,7 @@
 <li>
 <a href="http://jochym.github.io/qe-util">qe-util</a> a set of utilities for using Quantum-Espresso with ASE and ipython notebooks.</li>
 <li>
-<a href="http://jochym.github.io/qe-util">qe-doc</a> a set of tutorials for Quantum-Espresso environment inside IPython notebooks developed as a colaborative project between the Institute of Nuclear Physics and the University of Saskachwan. </li>
+<a href="http://jochym.github.io/qe-doc">qe-doc</a> a set of tutorials for Quantum-Espresso environment inside IPython notebooks developed as a colaborative project between the Institute of Nuclear Physics and the University of Saskachwan. </li>
 </ul><p>These are just the published projects with proper project pages. The rest of my projects are hosted on <a href="http://github.com/jochym">my github page</a>, but they are not ready for <em>public consumption</em> yet. I will add them here as they mature.</p>
       </section>
       <footer>
