Add depsy badge

--- a/index.html
+++ b/index.html
@@ -29,6 +29,9 @@
       <section>
         <h2>
 <a name="my-published-projects" class="anchor" href="#my-published-projects"><span class="octicon octicon-link"></span></a>My published projects</h2>
+<a href="http://depsy.org/person/365040">
+    <img src="http://depsy.org/api/person/365040/badge.svg">
+</a>
 
 <p>Here is a list of my current project pages maintained on GitHub (with project repos naturally).</p>
 
